# sovranx

./: .gitignore  CMakeLists.txt  README.md  index.html
.github/workflows/: ci.yml  release.yml
cmake/: CompilerFlags.cmake
config/: reame.conf  sovrano.conf  sovranx.conf
docs/: ARCA.md  BENCHMARKS.md  README.it.md  ROADMAP.md
include/reame/arca/: embedder.hpp  semantic_cache.hpp  server.hpp
include/reame/core/: engine.hpp  llama_backend.hpp
include/sovrano/cache/: cache_manager.hpp  cache_serializer.hpp  disk_cache_store.hpp
include/sovrano/core/: autoconfig.hpp  engine.hpp  llama_backend.hpp  model.hpp  sampler.hpp
include/sovrano/speculative/: form_draft.hpp
include/sovranx/cache/: cache_manager.hpp  cache_serializer.hpp  disk_cache_store.hpp  prefix_cache.hpp
include/sovranx/core/: autoconfig.hpp  conclave.hpp  engine.hpp  llama_backend.hpp  model.hpp  sampler.hpp  scheduler.hpp
include/sovranx/palimpsest/: corpus_index.hpp
include/sovranx/server/: api_handler.hpp  http_server.hpp  http_types.hpp
include/sovranx/speculative/: acceptance.hpp  batch_verifier.hpp  draft_generator.hpp  form_draft.hpp  prompt_lookup.hpp  speculative_decoder.hpp
include/sovranx/utils/: config.hpp  logger.hpp
scripts/: download_models.sh  sartoria.sh
src/: CMakeLists.txt  main.cpp
src/arca/: server.cpp
src/cache/: cache_manager.cpp  cache_serializer.cpp  disk_cache_store.cpp  prefix_cache.cpp
src/core/: autoconfig.cpp  conclave.cpp  engine.cpp  llama_backend_real.cpp  llama_backend_stub.cpp  model.cpp  sampler.cpp  scheduler.cpp
src/palimpsest/: corpus_index.cpp
src/server/: api_handler.cpp  http_parser.cpp  http_server.cpp
src/speculative/: acceptance.cpp  batch_verifier.cpp  draft_generator.cpp  form_draft.cpp  prompt_lookup.cpp  speculative_decoder.cpp
src/utils/: config.cpp  logger.cpp
tests/: CMakeLists.txt
tests/mock/: llama_mock.hpp
tests/unit/: test_api_handler.cpp  test_arca_server.cpp  test_autoconfig.cpp  test_cache.cpp  test_conclave.cpp  test_config.cpp  test_corpus_index.cpp  test_engine.cpp  test_form_draft.cpp  test_http_parser.cpp  test_http_server.cpp  test_logger.cpp  test_model.cpp  test_prefix_cache.cpp  test_prompt_lookup.cpp  test_sampler.cpp  test_scheduler.cpp  test_semantic_bench.cpp  test_semantic_cache.cpp  test_speculative.cpp
